--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="color:red">Hello!!!!!!!</h1>
     <hr>
-    <h2>do it</h2>
+    <h2>do it now</h2>
 <div class="example"><h2>Take me</h2>
     <nav>
     <ol TYPE="a" start="5">
